--- a/stylee.css
+++ b/stylee.css
@@ -6,11 +6,14 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 }
-.yerlesdir { background: url(img/plus.svg); background-position: 50%;   }
-.desktop{display: none!important;}
+.mobil {display: block!important}
+.menu-bar {display: block!important;}
+.header { display: block!important;}
+.old-header,.old-filtr,.filt3-botm,.footer-old  {display: none!important;}
+
 @media only screen and (min-width: 768px) {
-   .mobil {
-        display: none!important;
-    }
-    .desktop{display: flex!important;}
-}
+.menu-bar {display: none!important;}
+.header,.filtir,.banner-bot,.footercontent { display: none!important;}
+.old-header,.footer-old {display: block!important;}}
+.yerlesdir {
+    background: url(img/plus.svg);  background-position: 50%;}
